--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,7 @@
     RewriteCond %{REQUEST_URI} !^public
     RewriteRule ^(.*)$ public/$1 [L]
     Header set Access-Control-Allow-Origin: *
+    Header set Access-Control-Allow-Credentials: true
+    Header set Access-Control-Allow-Methods: GET, POST, PUT, DELETE
+    Header set Access-Control-Allow-Headers: Origin, X-Requested-With, Content-Type, Accept, Authorization
 </IfModule>
