--- a/.htaccess
+++ b/.htaccess
@@ -5,5 +5,6 @@
     Header set Access-Control-Allow-Origin: *
     Header set Access-Control-Allow-Credentials: true
     Header set Access-Control-Allow-Methods: GET, POST, PUT, DELETE
-    Header set Access-Control-Allow-Headers: Origin, X-Requested-With, Content-Type, Accept, Authorization
+    Header set Access-Control-Allow-Headers: *
+    Header set Access-Control-Max-Age: 86400
 </IfModule>
